--- a/blocks/visit/__button/visit__button.css
+++ b/blocks/visit/__button/visit__button.css
@@ -23,6 +23,12 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 530px) {
+    .visit__button {
+        margin: 16px auto 45px auto;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .visit__button {
         margin: 16px auto 45px auto;
